--- a/views/check.ejs
+++ b/views/check.ejs
@@ -16,17 +16,7 @@
             <div class="col-md-12 col-md-offset-1">
                 <div class="process-wrap">
                     <div class="process text-center active">
-                        <p><span calss="icon"><i class="icon-search2"></i></span></p>
-                        <h3>Fahrradauswahl</h3>
-                    </div>
-                    <div class="process text-center active">
-                        <p><span calss="icon"><i class="icon-dollar-sign"></i></span></p>
-                        <h3>Bezahlung</h3>
-                    </div>
-                    <div class="process text-center active">
-                        <p><span calss="icon"><i class="icon-checkmark"></i></span></p>
-                        
-                        <h3>Fertig</h3>
+                        <img src="/images/yes.svg" class="responsiveIMG" width="200" height="200">
                     </div>
                 </div>
             </div>
@@ -35,7 +25,6 @@
         <div class="container">
         <div class="row">
             <div class="col-md-12 col-md-offset-1 text-center" style="margin-top: 10px;">
-                <span class="icon"><i class="icon-shopping-cart"></i></span>
                 <h2>Vielen Dank für ihre Buchung! </h2>
                 <h4>Ihre Buchung ist abgeschlossen, die Räder sind reserviert</h4> 
                 <!--<h4>Sie können die Tickes auch als PDF herunterladen und drucken</h4>  -->
