--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -62,7 +62,7 @@
         <br>
         <br>
         <p class="lead text-center"> BikeWorld</p>
-        <p class="text-center"> Coblitzallee 1-9</p>
+        <p class="text-center"> Coblitzallee 10</p>
         <p class="text-center"> 68163 Mannheim</p>
 
       </div>
