--- a/views/impressum.ejs
+++ b/views/impressum.ejs
@@ -12,7 +12,7 @@
                         <div class="fancy-collapse-panel">
                       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                           <h1 style="text-align: center;">Impressum</h1><br> <h2>Angaben gem&auml;&szlig; &sect; 5 TMG:</h2> <p>BikeWorld GmbH<br />
-                        Goerdelerstraße 7<br /> 36037 Fulda</p> <h2>Vertreten durch:</h2>
+                        Coblitzallee 10<br />68163 Mannheim</p> <h2>Vertreten durch:</h2>
                         <p>Manuel Meixner<br/> Hendrik Riedel<br/></p> <h2>Kontakt:</h2> <p>Telefon: +49 (0) 123 456 789<br /> E-Mail: info@bikeworld.de</p>
                         <h2>Registereintrag:</h2> <p>Eintragung im Handelsregister. <br /> Registergericht: Amtsgericht
                         Mannheim <br /> Registernummer: HRB 123456</p> <h2>Umsatzsteuer:</h2> <p>Umsatzsteuer-
