--- a/views/gutschein.ejs
+++ b/views/gutschein.ejs
@@ -1,1 +1,7 @@
-<iframe src="/images/Plan_18SEB_4.pdf" width="100%" height="500px"></iframe>
+<% if (loggedin) { %>
+    <%- include("partials/secondaryHeader") %> <% } else { %> <%- include("partials/header") %> <% } %>
+  
+  <%- include("partials/goToTop") %>
+<iframe src="/images/gut-converted.pdf" width="100%" height="500px"></iframe>
+
+<%- include("partials/footer") %>
